--- a/index.html
+++ b/index.html
@@ -415,77 +415,103 @@ h1{font-size:138.5%;}h2{font-size:123.1%;}h3{font-size:108%;}h1,h2,h3{margin:1em
         <h1 style="text-align: center;"><img title="Logo" alt="w4rh0rse's avatar"
             src="http://i.imgur.com/g7BqTue.jpg"></h1>
         <h1 style="text-align: center;">Welcome to W4RH0RSE's BF4 Page</h1>
+        <p style="text-align: center;">Welcome!! I'm W4rH0rse and I help people
+          unlock the phantom bow and DICE LA camo. On this page you will find
+          information on how to find Final Stand map dogtags, unlock your
+          phantom assignments and get the bow.</p>
+        <p style="text-align: center;">I have listed the steps needed to unlock
+          the bow in three sections: TAGS, ASSIGNMENTS, ELEVATOR.</p>
       </div>
       <div id="bd">
-        <div id="yui-main">
+        <div style="text-align: left;" id="yui-main">
           <div class="yui-b">
             <div class="yui-g">
-              <p>Welcome!! I'm W4rH0rse and I help people unlock the phantom bow
-                and DICE LA camo. On this page you will find information on how
-                to find Final Stand map dogtags, unlock your phantom assignments
-                and get the bow as well as how to unlock the DICE LA camo.</p>
-              <p>I have listed the steps needed to unlock the bow in 3 steps:
-                TAGS, ASSIGNMENTS, ELEVATOR.</p>
+              <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; 1 - Getting
+                Final Stand Tags</h2>
             </div>
           </div>
         </div>
-        <div class="yui-b">
-          <h1><br>
-          </h1>
-          <h1>HOME</h1>
-          <h1>TAGS</h1>
-          <h1>ASSIGNMENTS</h1>
-          <h1>ELEVATOR</h1>
-          <h1>DICE LA CAMO</h1>
+        <div class="yui-b"><br>
         </div>
       </div>
       <div style="text-align: center;" id="ft">
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
-        <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);"><br>
-          </span></p>
+        <p><br>
+          The way we find the dogtags is to search all possible spots until we
+          find one. This page has an excellent up to date map of the possible
+          locations, only missing one glitched location on Hammerhead: <a target="_blank"
+            title="Link to map of tag locations." href="https://imgur.com/a/hzBRN">https://imgur.com/a/hzBRN</a>
+        </p>
+        <p>They are in tiny boxes about the size of a box of kitchen matches.
+          The boxes are white on Operation Whiteout and Hammerhead maps, and
+          green with a brown lid on Giants Of Karelia and Hangar 21 maps.</p>
+        <p>The boxes will slightly glow in IRNV/PLD scopes if your within approx
+          40 meters of it. They do not glow at all in FLIR/MAV sights, they used
+          to but a patch changed that.</p>
+        <p>The Final Stand dogtags can spawn at 1 of 30 (1 of 31 on Operation
+          Whiteout) possible spots. It will ONLY spawn at 1 spot at a time. They
+          do not spawn instantly on the start of a new round. The very first
+          spawn in a round seems to be variable between 5-10 minutes. </p>
+        <p>We usually start looking 8 minutes after a round starts. By starting
+          at 8 minutes, we may miss a tag by starting to early approximately 1
+          out of 100 times and have to search the spots we first checked after
+          the round started again. However being the odds are so low, its worth
+          it to save that extra 2 minutes the vast majority of the time.</p>
+        <p>If you find a dogtag, you MUST knife the box (DO NOT SHOOT IT!!),
+          then hit your interact button (default E) to pick up the dogtag. Be
+          very careful around the box as just about anything will destroy it,
+          even flares if they are within about 1 meter of the box.</p>
+        <p>The dogtags will respawn during a round if they are picked up or
+          destroyed. The respawn time if picked up is always 10 minutes. If the
+          box is destroyed the respawn time is 11 minutes from the time the box
+          was destroyed<span style="color: black;"><span style="font-family: Arial,Helvetica,sans-serif;"><br>
+            </span></span></p>
+        <h2><br>
+        </h2>
+        <h2>2 - Assignments</h2>
+        <p>You will have to unlock then complete the first three phantom
+          assignments to be able to survive the elevator ride down to the
+          phantom room. You unlock the first three phantom assignments by
+          entering three passwords on Battlelog.</p>
+        <p>First go to the "Leaderboards" page on Battlelog. Near the bottom
+          left corner of the page you will see a faded mask/skull, click on it.
+          You will be taken to a black page with a command prompt, enter these
+          three passwords exactly as written one at a time:</p>
+        <p>1 - bumpinthenight</p>
+        <p>2 - epic dream worlds</p>
+        <p>3 - 24344241893</p>
+        <p>Once that is done you will be able to go to the "Assignments" page on
+          Battlelog and see what is required to complete the first three phantom
+          assignments as well as track your progress on completing them.</p>
+        <p><br>
+        </p>
+        <h2>3 - Elevator</h2>
+        <p>The final step is preparing for your elevator ride down to the
+          phantom room. Its simple but many people forget to do it or don't know
+          whats required. You must equip the Final Stand map dogtag that you
+          found in the first step as your left side dogtag and you must equip
+          the phantom skull tag you got for completing the first phantom
+          assignment as your right side dogtag.</p>
+        <p>Also you must equip phantom camo on either one or both of the weapons
+          you spawn with and on your soldier.</p>
+        <p>You need at least one of every Final Stand map tag represented in the
+          elevator to get the button to activate. Duplicate tags are ok in the
+          elevator, they just wont help get activate it. If someone has the
+          black memory stick dogtags from completing the fourth and last phantom
+          assignment, they can count as 2 tags in the elevator by equipping a
+          Final Stand map tag on the left side and their black tag on the right
+          side.</p>
+        <p>Once your down in the phantom room there are TWO things to grab.
+          Obviously you'll want to grab the bow but you also need to grab the
+          orders (papers) on top of the highest part of the cabinet to the east
+          side of the glass bow enclosure. Those papers unlock the fourth and
+          final phantom assignment.</p>
+        <p><br>
+        </p>
         <p><span style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 20.8px; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);">Copyright
             © 2016 by W4rH0rse<br>
           </span></p>
