--- a/index.html
+++ b/index.html
@@ -421,27 +421,16 @@ h1{font-size:138.5%;}h2{font-size:123.1%;}h3{font-size:108%;}h1,h2,h3{margin:1em
           phantom assignments and get the bow.</p>
         <p style="text-align: center;">I have listed the steps needed to unlock
           the bow in three sections: TAGS, ASSIGNMENTS, ELEVATOR.</p>
+        <p style="text-align: center;"><br>
+        </p>
+        <h1 style=" text-align: center;">1 - Getting Final Stand Tags</h1>
       </div>
       <div id="bd">
-        <div style="text-align: left;" id="yui-main">
-          <div class="yui-b">
-            <div class="yui-g">
-              <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; 1 - Getting
-                Final Stand Tags</h2>
-            </div>
-          </div>
-        </div>
         <div class="yui-b"><br>
         </div>
       </div>
       <div style="text-align: center;" id="ft">
-        <p><br>
-          The way we find the dogtags is to search all possible spots until we
+        <p>The way we find the dogtags is to search all possible spots until we
           find one. This page has an excellent up to date map of the possible
           locations, only missing one glitched location on Hammerhead: <a target="_blank"
             title="Link to map of tag locations." href="https://imgur.com/a/hzBRN">https://imgur.com/a/hzBRN</a>
