--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@ h1{font-size:138.5%;}h2{font-size:123.1%;}h3{font-size:108%;}h1,h2,h3{margin:1em
         <h1 style="text-align: center;"><img title="Logo" alt="w4rh0rse's avatar"
             src="http://i.imgur.com/g7BqTue.jpg"></h1>
         <h1 style="text-align: center;">Welcome to W4RH0RSE's BF4 Page</h1>
+        <h2>Teamspeak: w4rh0rse.tk</h2>
         <p style="text-align: center;">Welcome!! I'm W4rH0rse and I help people
           unlock the phantom bow and DICE LA camo. On this page you will find
           information on how to find Final Stand map dogtags, unlock your
