--- a/index.html
+++ b/index.html
@@ -470,6 +470,8 @@ h1{font-size:138.5%;}h2{font-size:123.1%;}h3{font-size:108%;}h1,h2,h3{margin:1em
           then hit your interact button (default E) to pick up the dogtag. Be
           very careful around the box as just about anything will destroy it,
           even flares if they are within about 1 meter of the box.</p>
+        <p>Also you can only pick up a dogtag ONCE per map as each map only
+          spawns 1 type of tag.</p>
         <p>The dogtags will respawn during a round if they are picked up or
           destroyed. The respawn time if picked up is always 10 minutes. If the
           box is destroyed the respawn time is 11 minutes from the time the box
