--- a/index.html
+++ b/index.html
@@ -415,10 +415,8 @@ h1{font-size:138.5%;}h2{font-size:123.1%;}h3{font-size:108%;}h1,h2,h3{margin:1em
         <h1 style="text-align: center;"><img title="Logo" alt="w4rh0rse's avatar"
             src="http://i.imgur.com/g7BqTue.jpg"></h1>
         <h1 style="text-align: center;">Welcome to W4RH0RSE's BF4 Page</h1>
-        <h2>Have questions? Ask me on:</h2>
-        <h2>Teamspeak: w4rh0rse.tk (Going away 7-9-16)</h2>
-        <h2>Mumble: mumble.w4rh0rse.tk Port: 30457 </h2>
-        <h2><a title="Mumble Server Link" href="mumble://mumble.w4rh0rse.tk:30457/?version=1.2.0">Mumble
+        <h2>Have questions? Ask me on Mumble: mumble.w4rh0rse.tk Port: 30593 </h2>
+        <h2><a title="Mumble Server Link" href="mumble://mumble.w4rh0rse.tk:30593/?version=1.2.0">Mumble
             Server Link</a></h2>
         <p>Don't have Mumble? Get it at: <b><a title="Get Mumble" href="https://www.mumble.info/">https://www.mumble.info/</a></b>
           - Mumble has lower latency than Teamspeak, great audio quality,
